# string_macro

./: CMakeLists.txt  GenerateHeader.cmake  README.md
tests/: CMakeLists.txt
tests/multiple_projects/: CMakeLists.txt
tests/multiple_projects/lib1/: CMakeLists.txt  lib1generator.cpp
tests/multiple_projects/lib2/: CMakeLists.txt  lib2generator.cpp
tests/multiple_projects/lib3/: CMakeLists.txt  lib3generator.cpp
tests/multiple_projects/real_code/: CMakeLists.txt  main.cpp
tests/single_generated/: CMakeLists.txt  generator.cpp  main.cpp
